--- a/ECALounge.html
+++ b/ECALounge.html
@@ -324,48 +324,13 @@ Don't wait! Please RSVP today - we look forward to seeing you soon! </div>
                         </tr>
                      </tbody>
                   </table>
-               <!-- xxxxxxx 3B FEATURED TEXT INSERT xxxxxxx -->
-           		 <!-- xxxxxxx FOOTER xxxxxxx -->
-                <table align="center" width="100%" cellspacing="0" cellpadding="5" border="0" bgcolor="#ffffff" style="border-top:1px solid #ffffff;">
-                   <tbody>
-                      <tr>
-                         <td align="center">
-                            <table class="vb-fullwidth" align="left" valign="middle" width="40%" height="80" cellspacing="0" cellpadding="0" border="0">
-                               <tbody>
-                                  <tr>
-                                     <td class="cb-center" align="left" valign="middle">
-                                        <img width="250" src="http://www.oracle.com/us/500x118-logo-em-badge-tagline-4418247.png">
-                                     </td>
-                                  </tr>
-                               </tbody>
-                            </table>
-                            <table class="vb-fullwidth" align="right" valign="middle" width="55%" height="80" cellspacing="0" cellpadding="0" border="0" style="font-family:Arial, Helvetica, sans serif;">
-                               <tbody>
-                                  <tr>
-                                     <td class="cb-center" align="right" valign="middle" style="font-size: 10px; color:#939699;">
-                                        <div style="line-height:150%;">Copyright &copy; 2018 Oracle. All rights reserved.</div>
-                                        <div style="line-height:150%;"><a href="https://www.oracle.com/corporate/contact/index.html" target="_blank" style="color:#939699;">Contact Us</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://www.oracle.com/legal/copyright.html" target="_blank" style="color:#939699;">Legal Notices and Terms of Use</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.oracle.com/html/privacy.html" target="_blank" style="color:#939699;">Privacy Statement</a>
-                                        </div>
-                                     </td>
-                                  </tr>
-                               </tbody>
-                            </table>
-                         </td>
-                      </tr>
-                   </tbody>
-                </table>
-            <!-- xxxxxxx FOOTER xxxxxxx -->
-             </td>
-          </tr>
-       </tbody>
-    </table>
- </body>
-</html>
-
-
-
-
-
+               <!-- xxxxxxx 3B FEATURED TEXT INSERT xxxxxxx -->          
+  <tr>
+                                              <td align="left" class="no-padding" style="padding-left: 10px;">
+                                                 <!--Oracle Logo-->
+                                                 <img id="ecavideoclip.png" width="150" border="0" style="display:block;" src="ecavideoclip.png" alt="Oracle">
+                                              </td>
+                                           </tr>
 
            		 <!-- xxxxxxx FOOTER xxxxxxx -->
                 <table align="center" width="100%" cellspacing="0" cellpadding="5" border="0" bgcolor="#ffffff" style="border-top:1px solid #ffffff;">
