--- a/ECALounge.html
+++ b/ECALounge.html
@@ -123,7 +123,7 @@
 
                                            <!--SPACER--><div>&nbsp;</div><!--SPACER-->
 
-                                           <div>Annoucing Oracle Cloud Solution Hub Architect Lounge</div>
+                                           <div>Announcing Oracle Cloud Solution Hub Architect Lounge</div>
 
                                         </td>
                                       </tr>
